argo-cd/dotnet-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-api
  template:
    metadata:
      labels:
        app: dotnet-api
    spec:
      containers:
        - name: dotnet-api
          image: nickpeachey/productsapi:0.1
          ports:
            - containerPort: 80
