argo-cd/dotnet-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-api-ingress
  namespace: default
spec:
  rules:
    - host: dotnet-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-api
                port:
                  number: 80
